force-app/main/default/objects/Insurance__c/fields/Adjuster_Email__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Email__c</fullName>
    <label>Adjuster Email</label>
    <type>Email</type>
</CustomField>