force-app/main/default/objects/Insurance__c/fields/Adjuster_Name__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Name__c</fullName>
    <label>Adjuster Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>