force-app/main/default/objects/Insurance__c/fields/Adjuster_Phone__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Phone__c</fullName>
    <label>Adjuster Phone</label>
    <type>Phone</type>
</CustomField>