force-app/main/default/objects/Insurance__c/fields/Adjuster_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Supervisor__c</fullName>
    <label>Adjuster Supervisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>