force-app/main/default/objects/Insurance__c/fields/Carrier_Account__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>