force-app/main/default/objects/Insurance__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reported</fullName>
            </value>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed — Paid</fullName>
            </value>
            <value>
                <fullName>Closed — Denied</fullName>
            </value>
            <value>
                <fullName>Closed — Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>