force-app/main/default/objects/Insurance__c/fields/Coverage_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Confirmed</label>
    <type>Checkbox</type>
</CustomField>