force-app/main/default/objects/Insurance__c/fields/Coverage_Side__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Side__c</fullName>
    <label>Coverage Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client&apos;s Policy</fullName>
            </value>
            <value>
                <fullName>Opposing Party Policy</fullName>
            </value>
            <value>
                <fullName>Third-Party Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>