force-app/main/default/objects/Insurance__c/fields/Date_Claim_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Reported__c</fullName>
    <label>Date Claim Reported</label>
    <type>Date</type>
</CustomField>