force-app/main/default/objects/Insurance__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>