force-app/main/default/objects/Insurance__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability — Auto</fullName>
            </value>
            <value>
                <fullName>Liability — General</fullName>
            </value>
            <value>
                <fullName>UM/UIM</fullName>
            </value>
            <value>
                <fullName>Med Pay</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>