force-app/main/default/objects/Insurance__c/fields/Liability_Decision__c.field-meta.xml
<CustomField>
    <fullName>Liability_Decision__c</fullName>
    <label>Liability Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Determined</fullName>
            </value>
            <value>
                <fullName>Accepted — Full</fullName>
            </value>
            <value>
                <fullName>Accepted — Partial</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Reservation of Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>