force-app/main/default/objects/Insurance__c/fields/Liability_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Decision_Date__c</fullName>
    <label>Liability Decision Date</label>
    <type>Date</type>
</CustomField>