force-app/main/default/objects/Insurance__c/fields/Policy_Limits_Per_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limits_Per_Occurrence__c</fullName>
    <label>Policy Limits (Per Occurrence)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>