force-app/main/default/objects/Insurance__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>