force-app/main/default/objects/Insurance__c/fields/Reservation_of_Rights__c.field-meta.xml
<CustomField>
    <fullName>Reservation_of_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservation of Rights</label>
    <type>Checkbox</type>
</CustomField>